--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <style
         name="Base.Theme.ShoppingList" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/green_main</item>
-        <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="Theme.ShoppingList" parent="Base.Theme.ShoppingList" />
+    <style name="Theme.ShoppingList" parent="Theme.AppCompat.Light.DarkActionBar" >
+    </style>
 </resources>
