--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_main">#368B04</color>
+    <color name="green_main_dark">#205502</color>
+
+    <color name="picker_red">#FF0000</color>
+    <color name="picker_green">#3FD106</color>
+    <color name="picker_blue">#041EEF</color>
+    <color name="picker_black">#0B0B0B</color>
+    <color name="picker_yellow">#FBBD02</color>
+    <color name="picker_orange">#8B4F06</color>
 </resources>
