--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,19 @@
 <resources>
+
     <style
-        name="Base.Theme.ShoppingList" parent="Theme.Material3.DayNight.NoActionBar">
+        name="Theme.ShoppingList" parent="Theme.AppCompat.DayNight.DarkActionBar" >
         <item name="colorPrimary">@color/green_main</item>
+        <item name="colorPrimaryVariant">@color/green_main</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="Theme.ShoppingList" parent="Theme.AppCompat.Light.DarkActionBar" >
+    <style
+        name="Theme.NewNote" parent="Theme.AppCompat.DayNight.DarkActionBar" >
+        <item name="colorPrimary">@color/green_main_dark</item>
+        <item name="colorPrimaryVariant">@color/green_main_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/black</item>
     </style>
+
 </resources>
+
