created NewListDialog, created ShoppingListNamesFragment, save database ShopListName, created list_name_item.xml, created adapter for list name ShopListName, deleting ShopListName

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="picker_black">#0B0B0B</color>
     <color name="picker_yellow">#FBBD02</color>
     <color name="picker_orange">#8B4F06</color>
+    <color name="list_name_item">#353332</color>
 </resources>
