--- a/app/src/main/res/menu/shop_list_menu.xml
+++ b/app/src/main/res/menu/shop_list_menu.xml
@@ -23,7 +23,7 @@
         android:icon="@drawable/ic_new_shop_item"
         app:actionLayout="@layout/edit_action_layout"
         android:orderInCategory="1"
-        app:showAsAction="ifRoom|collapseActionView"
+        app:showAsAction="always|collapseActionView"
         />
 
     <item
@@ -31,7 +31,7 @@
         android:id="@+id/save_item"
         android:icon="@drawable/ic_save"
         android:orderInCategory="2"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
 </menu>
