--- a/app/src/main/res/layout/shop_library_list_item.xml
+++ b/app/src/main/res/layout/shop_library_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -30,7 +30,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="TextView"
+                android:text="@string/textview"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +38,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.51" />
+                app:layout_constraintVertical_bias="0.51"
+                />
 
             <ImageButton
                 android:id="@+id/imEdit"
@@ -49,18 +50,25 @@
                 android:src="@drawable/ic_edit_library"
                 app:layout_constraintBottom_toBottomOf="@+id/imDelete"
                 app:layout_constraintEnd_toStartOf="@+id/imDelete"
-                app:layout_constraintTop_toTopOf="@+id/imDelete" />
+                app:layout_constraintTop_toTopOf="@+id/imDelete"
+                android:contentDescription="@string/todo"
+                />
 
             <ImageButton
                 android:id="@+id/imDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="55dp"
                 android:layout_marginEnd="16dp"
                 android:background="@null"
                 android:src="@drawable/baseline_delete_forever_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/todo"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
