--- a/app/src/main/res/layout/list_name_item.xml
+++ b/app/src/main/res/layout/list_name_item.xml
@@ -72,12 +72,13 @@
         app:layout_constraintTop_toTopOf="@+id/cardView2" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/counterCard"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="5dp"
-        android:backgroundTint="#F4D605"
+        android:backgroundTint="@color/red_main"
         app:cardCornerRadius="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/imEdit"
         app:layout_constraintEnd_toStartOf="@+id/imEdit"
