--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_main">#368B04</color>
+    <color name="red_main">#ED0404</color>
     <color name="green_main_dark">#205502</color>
 
     <color name="picker_red">#FF0000</color>
